Fixed mmain manner height on mobile / added instagram to store finder / fixed clicing on srlrct on mobile in store finder

--- a/assets/style/_icons.scss
+++ b/assets/style/_icons.scss
@@ -53,6 +53,12 @@
 .icon-youtube:before {
   content: "\e919";
 }
+.icon-globe-16:before {
+  content: "\e91c";
+}
+.icon-instagram-16:before {
+  content: "\e91d";
+}
 .icon-tick-16:before {
   content: "\e90d";
 }
