--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -233,7 +233,7 @@ img {
   }
   .ratio-main-screen-md {
     height: 0;
-    padding-bottom: calc(100vh - 56px);
+    padding-bottom: calc(var(--vh, 1vh) * 100 - 56px);
     position: relative;
     & > * {
       position: absolute;
@@ -244,7 +244,7 @@ img {
   }
 
   .ratio-main-screen {
-    padding-bottom: calc(100vh - 56px);
+    padding-bottom: calc(var(--vh, 1vh) * 100 - 56px);
   }
 
   .center-md {
